# appli-apolline

./: .gitignore  ARCHITECTURE.md  ROADMAP.md  convert-icon.js  index.html  latest.json  launch.bat  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
apolline-backend/: .env.example  README.md  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
apolline-backend/deploy/: apolline-api.service  backup.sh  nginx.conf
apolline-backend/drizzle/: 0001_drop_dossier_legacy_loan_fields.sql  0002_banques_grille_par_duree.sql  0003_audit_log.sql  0004_indexes_audit.sql  0005_pieces_storage.sql  0006_coworker.sql  0007_factures.sql  0008_conformite.sql  0009_ptz_zone.sql  0010_pieces_extraction.sql  0011_dossier_bien_details.sql  0011_pieces_count_backfill.sql  0012_client_conjoint_structured.sql  0013_dossier_apporteur_id.sql
apolline-backend/scripts/: seed.ts
apolline-backend/src/: index.ts
apolline-skills/ddp-pdf/: SKILL.md
doc/: Caddyfile-updater  nginx-updater.conf
docs/: AI-skills.md  Pieces-storage.md  RGPD-politique.md
e2e/: 01-login.spec.ts  02-dossier-creation.spec.ts  03-sync-backend.spec.ts  README.md
e2e/fixtures/: testUser.ts
scripts/: release.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+152 files in other folders)
